# mzcy_dotfiles

./: .gitattributes  .gitignore  .proxy  README.md  config_home.ps1  config_home.sh  config_home_fish.sh  config_projectroot.ps1  config_projectroot.sh  config_pwsh.ps1  config_vscode.ps1  update_dotfiles.ps1  update_dotfiles.sh
backup/: mzcy_profile_20231107.code-profile
clang/: .clang-format  .clang-tidy
cmake/: CMakeLists.txt  mzcy_utils.cmake  use_mzcy_utils.cmake
cmake/demo/: CMakeLists.txt
editorconfig/: .editorconfig
fish/: config.fish
git/: .gitconfig  git-note-1.md  git-note-2.md
pwsh/: Microsoft.PowerShell_profile.ps1
pwsh/mzcy_pwsh_utils/: mzcy_pwsh_utils.psd1  mzcy_pwsh_utils.psm1  mzcy_simple.omp.json
tmux/: .tmux.conf  tmux-note.md
vim/: .vimrc
vscode/: keybindings.json  settings.json
